--- a/app/index.html
+++ b/app/index.html
@@ -66,15 +66,15 @@
                   <div class="pagination easing">
                      <ul class="paginationlist cl">
                         <li class="pagination-item active"><span>1</span></li>
-                        <li class="pagination-item"><a href="#" class="pagination-link">2</a></li>
-                        <li class="pagination-item"><a href="#" class="pagination-link">3</a></li>
-                        <li class="pagination-item"><a href="#" class="pagination-link">4</a></li>
-                        <li class="pagination-item"><a href="#" class="pagination-link">5</a></li>
-                        <li class="pagination-item all"><a href="#" class="pagination-link">Все</a></li>
+                        <li class="pagination-item"><a href="javascript://" class="pagination-link">2</a></li>
+                        <li class="pagination-item"><a href="javascript://" class="pagination-link">3</a></li>
+                        <li class="pagination-item"><a href="javascript://" class="pagination-link">4</a></li>
+                        <li class="pagination-item"><a href="javascript://" class="pagination-link">5</a></li>
+                        <li class="pagination-item all"><a href="javascript://" class="pagination-link">Все</a></li>
                      </ul>
                   </div>
                   <div class="marking-toggle">
-                     <div id="dd" class="dropdown-ninja"> <span data-index="" class="dropdown-placeholder">Сеткой</span>
+                     <div class="dropdown-ninja"><span data-index="" class="dropdown-placeholder">Сеткой</span>
                         <ul class="dropdown">
                            <li><a href="javascript://">Сеткой</a></li>
                            <li><a href="javascript://">Линиями</a></li>
@@ -200,12 +200,44 @@
                         </div>
                      </div>
                   </div>
+                  <div class="filter-bottom-bl">
+                     <div class="filter-bl cl">
+                        <div class="pagination easing">
+                           <ul class="paginationlist cl">
+                              <li class="pagination-item active"><span>1</span></li>
+                              <li class="pagination-item"><a href="javascript://" class="pagination-link">2</a></li>
+                              <li class="pagination-item"><a href="javascript://" class="pagination-link">3</a></li>
+                              <li class="pagination-item"><a href="javascript://" class="pagination-link">4</a></li>
+                              <li class="pagination-item"><a href="javascript://" class="pagination-link">5</a></li>
+                              <li class="pagination-item all"><a href="javascript://" class="pagination-link">Все</a></li>
+                           </ul>
+                        </div>
+                        <div class="marking-toggle">
+                           <div class="dropdown-ninja"><span data-index="" class="dropdown-placeholder">Сеткой</span>
+                              <ul class="dropdown">
+                                 <li><a href="javascript://">Сеткой</a></li>
+                                 <li><a href="javascript://">Линиями</a></li>
+                              </ul>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="seo-content">
+                     <h1>Пара слов о магазине</h1>
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
+                     <p> Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                        mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
+                  </div>
                </div>
             </div>
          </div>
       </div>
       <footer class="page-footer">
          <div class="conteiner-footer">
+            <div id="back-top" style="display:none;"><a id="top">Наверх</a></div>
             <div class="footer-logo"><img src="img/logo-footer.png" alt="logo-footer" class="footer-logo-img"></div>
             <div class="footer__navigation-list-bl">
                <div class="footer__navigation-item-bl">
