--- a/app/index.html
+++ b/app/index.html
@@ -45,15 +45,17 @@
                </div>
             </header>
             <nav class="navigation">
-               <ul class="navigation-list">
-                  <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Мобильные телефоны</span></a></li>
-                  <li class="navigation-item"><a href="javascript://" class="navigation-link active"><span class="navigation-link__text">Планшеты</span></a></li>
-                  <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Мр3 плееры</span></a></li>
-                  <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Персональные компьютеры</span></a></li>
-                  <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Ноутбуки</span></a></li>
-                  <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Apple TV</span></a></li>
-                  <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Аксессуары</span></a></li>
-               </ul>
+               <div class="navigation__wrap">
+                  <ul class="navigation-list">
+                     <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Мобильные телефоны</span></a></li>
+                     <li class="navigation-item"><a href="javascript://" class="navigation-link active"><span class="navigation-link__text">Планшеты</span></a></li>
+                     <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Мр3 плееры</span></a></li>
+                     <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Персональные компьютеры</span></a></li>
+                     <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Ноутбуки</span></a></li>
+                     <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Apple TV</span></a></li>
+                     <li class="navigation-item"><a href="javascript://" class="navigation-link "><span class="navigation-link__text">Аксессуары</span></a></li>
+                  </ul>
+               </div>
             </nav>
             <div class="breadcrumbs cl">
                <!-- Хлебные крошки-->
